updated sidebar undo and redo buttons

--- a/app/globals.css
+++ b/app/globals.css
@@ -17,9 +17,9 @@
   --foreground: hsl(0, 0, 92%);
   --foreground-second: hsl(0, 0, 60%);
 
-  --card-background: hsl(0, 1%, 18%);
+  --card-background: hsl(0, 1%, 25%);
   --card-shadow: hsl(0, 0, 12%);
-  --card-child-background: hsl(0, 0, 28%);
+  --card-child-background: hsl(0, 1%, 37%);
   --card-child-shadow: hsl(0, 0, 20%);
 
   --button-main: hsl(208, 75%, 40%);
